tests/fixtures/invalid/pow_float_list_str.py
# Cannot call pow() with Float, List[int], Str
x = pow(1.0, [1, 2, 3], "hello")
